--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "require": {
-        "twig/twig": "^1.0"
+        "twig/twig": "~1.0"
     },
     "autoload": {
-    	"psr-4": {
-    		"Core\\": "Core/",
-    		"App\\": "App/"
-    	}
+        "psr-4": {
+             "Core\\": "Core/",
+             "App\\": "App/"
+        }
     }
 }
