--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "require": {
-        "twig/twig": "~1.0"
+        "twig/twig": "~2.0",
+        "mailgun/mailgun-php": "^2.3",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message": "^1.5"
     },
     "autoload": {
         "psr-4": {
